# latchgate

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  RISK_MODEL.md  SECURITY.md  deny.toml  docker-compose.yml  install.sh  latchgate.example.toml  prometheus.dev.yml  rust-toolchain.toml
crates/latchgate-api/: Cargo.toml
crates/latchgate-api/src/: actions.rs  admin.rs  admin_crud.rs  approvals.rs  audit.rs  domains.rs  expiry.rs  health.rs  json_response.rs  leases.rs  lib.rs  listen.rs  metrics.rs  outbox.rs  paths.rs  policy.rs  policy_allowlist.rs  receipts.rs  server.rs  test_support.rs
crates/latchgate-auth/: Cargo.toml
crates/latchgate-auth/src/: auth.rs  lib.rs  replay.rs
crates/latchgate-auth/src/dpop/: key_cache.rs  mod.rs  operator.rs  verify.rs
crates/latchgate-auth/src/identity/: mod.rs  peercred.rs
crates/latchgate-auth/src/issuer/: jwt.rs  (+1 more)
crates/latchgate-bin/: Cargo.toml
crates/latchgate-bin/src/: main.rs
crates/latchgate-cli/: Cargo.toml  build.rs
crates/latchgate-cli/src/: client.rs  lib.rs  output.rs
crates/latchgate-client/: Cargo.toml
crates/latchgate-client/src/: auth.rs  endpoints.rs  lib.rs  transport.rs
crates/latchgate-config/: Cargo.toml
crates/latchgate-config/src/: egress.rs  env.rs  error.rs  fs_root_validation.rs  identity.rs  lib.rs  listener.rs  loader.rs  logging.rs  paths.rs  policy.rs  posture.rs  rate_limits.rs  sandbox.rs  secrets.rs  signing.rs  storage.rs  tests.rs  validate.rs
crates/latchgate-core/: Cargo.toml
crates/latchgate-core/src/: atomic.rs  domain_event.rs  fs_path.rs  host_observed.rs  lib.rs  manifest_types.rs  paths.rs  policy_data.rs  sanitize.rs  security_constants.rs  sqlite_init.rs  types.rs
crates/latchgate-crypto/: Cargo.toml
crates/latchgate-crypto/src/: ed25519.rs  grant_ext.rs  grant_signer.rs  key_file.rs  lib.rs  receipt_ext.rs  receipt_signer.rs  verifying_keys.rs
crates/latchgate-embed/: Cargo.toml  build.rs
crates/latchgate-embed/src/: egress_sync.rs  embedded_manifests.rs  embedded_policies.rs  embedded_presets.rs  embedded_providers.rs  lib.rs
crates/latchgate-kernel/: Cargo.toml
crates/latchgate-kernel/src/: approved_execution.rs  coarse_clock.rs  execution.rs  init.rs  json_response.rs  learned_allowlist.rs  lib.rs  pipeline.rs  pipeline_audit.rs  rate_limit.rs  request.rs  state.rs  template.rs  test_support.rs  verification.rs
crates/latchgate-ledger/: Cargo.toml
crates/latchgate-ledger/src/: events.rs  learned_allowlist.rs  learned_domains.rs  learned_paths.rs  lib.rs  metrics.rs  schema.rs  store.rs  store_approvals.rs  store_events.rs  store_intents.rs  store_receipts.rs
crates/latchgate-mcp/: Cargo.toml
crates/latchgate-mcp/src/: admin_client.rs  auth.rs  config.rs  gate_client.rs  install.rs  lib.rs  main.rs  protocol.rs  server.rs
crates/latchgate-policy/: Cargo.toml
crates/latchgate-policy/src/: embedded.rs  lib.rs  policy.rs
crates/latchgate-providers/: Cargo.toml
crates/latchgate-providers/src/: backends.rs  fs_io.rs  host_io.rs  lib.rs  policy_context.rs  secrets.rs  task.rs
crates/latchgate-registry/: Cargo.toml
crates/latchgate-registry/src/: lib.rs  manifest.rs  manifest_types.rs  manifest_validate.rs  schema.rs  store.rs
crates/latchgate-sandbox/: Cargo.toml
crates/latchgate-sandbox/src/: bwrap.rs  hardening.rs  landlock.rs  lib.rs  loopback_forward.rs  netns.rs  platform.rs  proxy.rs  seccomp.rs  tests.rs
crates/latchgate-state/: Cargo.toml
crates/latchgate-state/src/: approval_contract_tests.rs  approval_inmemory.rs  approval_redis.rs  approval_sqlite.rs  approval_types.rs  approvals.rs  budgets.rs  lib.rs  sqlite.rs
crates/latchgate-tui/: Cargo.toml
crates/latchgate-tui/src/: actions.rs  activity.rs  allowlists.rs  app.rs  approvals.rs  config.rs  config_logic.rs  dashboard.rs  domains.rs  formatting.rs  input.rs  learned_list.rs  lib.rs  paths.rs  screen.rs  theme.rs  widgets.rs  wizard.rs
crates/latchgate-webhooks/: Cargo.toml
crates/latchgate-webhooks/src/: config.rs  delivery.rs  dispatcher.rs  formatter.rs  lib.rs  outbox.rs
examples/orchestrator/: README.md  _helpers.py  orchestrator.py  pyproject.toml
fuzz/: .gitignore  Cargo.toml
fuzz/dictionaries/: domain.dict  glob.dict  ip.dict  json.dict  url.dict
fuzz/fuzz_targets/: canonical_hash.rs  domain_allowlist_match.rs  ip_classification.rs  manifest_domain_entry.rs  parse_host_from_url.rs  path_glob_match.rs
providers/: Cargo.toml  README.md
providers/artifact_store/: Cargo.toml
providers/artifact_store/src/: lib.rs
providers/database/: Cargo.toml
providers/database/src/: lib.rs
providers/email/: Cargo.toml
providers/email/src/: lib.rs
providers/fs/: Cargo.toml
providers/fs/src/: lib.rs
providers/http_api/: Cargo.toml
providers/http_api/src/: lib.rs
providers/queue/: Cargo.toml
providers/queue/src/: lib.rs
providers/wit/: io-database.wit  io-fs.wit  io-http.wit  io-log.wit  io-queue.wit  io-smtp.wit  io-storage.wit  provider.wit
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: approval_flow.py  hello.py  smoke_test.py
sdk/python/latchgate/: __init__.py  _client.py  _crypto.py  _exceptions.py  _models.py
sdk/python/tests/: test_client.py  test_crypto.py  test_golden_vectors.py
tests/: Cargo.toml  build.rs
tests/fixtures/manifests/: evidence_probe.yaml  evidence_probe_approval.yaml
tests/integration/: e2e.rs  evidence.rs  harness.rs  main.rs  resilience.rs
tests/integration/approval/: api_contract.rs  atomic.rs  fault_recovery.rs  mod.rs  plan.rs  rollback.rs
tests/providers/: Cargo.toml
tests/providers/evidence_probe/: Cargo.toml
tests/providers/infinite_loop/: Cargo.toml
tests/providers/memory_hog/: Cargo.toml
tests/standalone/: compose_ports.rs  execution_path.rs  isolation.rs  ledger_integrity.rs  main.rs  manifest_coverage.rs  receipt_rotation.rs  wasm_conformance.rs  webhooks.rs
tests/stress/: Cargo.toml
tests/stress/benches/: hot_paths.rs
tests/stress/load/: run.sh
tests/stress/src/: lib.rs
(+247 files in other folders)
