[package]
name = "latchgate-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "DPoP proofs, Lease JWT issuance/verification, and anti-replay cache for LatchGate"

[dependencies]
latchgate-core = { workspace = true }
latchgate-crypto    = { workspace = true }
latchgate-config    = { workspace = true }
jsonwebtoken   = { workspace = true }
p256           = { workspace = true }
rand           = { workspace = true }
base64ct       = { workspace = true }
redis          = { workspace = true }
dashmap        = { workspace = true }
lru            = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sha2           = { workspace = true }
chrono         = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
tokio          = { workspace = true }
uuid                     = { workspace = true }
serde_json_canonicalizer = { workspace = true }
hex                      = { workspace = true }
toml                     = { workspace = true }
ring = "0.17.14"

[dev-dependencies]
[lints]
workspace = true
