[package]
name = "latchgate-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MCP adapter for LatchGate — exposes protected actions as MCP tools"

[[bin]]
name = "latchgate-mcp"
path = "src/main.rs"

[dependencies]
latchgate-auth = { workspace = true }
latchgate-core = { workspace = true }
latchgate-client = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }
base64ct = { version = "1", features = ["alloc"] }
toml = { workspace = true }
serde_yaml_ng = { workspace = true }
jsonschema = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
[lints]
workspace = true
