[package]
name = "latchgate-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "OPA policy client and embedded Rego evaluator for LatchGate"

[dependencies]
latchgate-core = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
reqwest        = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
tokio          = { workspace = true }
regorus        = { workspace = true }

[dev-dependencies]
[lints]
workspace = true
