[package]
name = "latchgate-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WASM provider execution and host I/O for LatchGate"

[features]
default = []

[dependencies]
latchgate-core = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
toml           = { workspace = true }
tracing        = { workspace = true }
tokio          = { workspace = true }
dashmap        = { workspace = true }
reqwest        = { workspace = true }
uuid           = { workspace = true }
wasmtime       = { workspace = true }
wasmtime-wasi  = { workspace = true }
url            = { workspace = true }
zeroize        = { workspace = true }
chrono         = { workspace = true }
libc           = { workspace = true }

# Host I/O clients
lettre         = { workspace = true }
sqlx           = { workspace = true }
lapin          = { workspace = true }
deadpool       = { workspace = true }
object_store   = { workspace = true }


[dev-dependencies]
tempfile = { workspace = true }
[lints]
workspace = true
