[package]
name = "latchgate-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Linux namespace sandbox for agent process containment"

[features]
default = []

[dependencies]
latchgate-core = { workspace = true }
latchgate-config    = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
thiserror      = { workspace = true }
tempfile       = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc            = { workspace = true }
rustls          = { workspace = true }
tokio-rustls    = { workspace = true }
rustls-pki-types = { workspace = true }
webpki-roots    = { workspace = true }
zeroize         = { workspace = true }
hex             = { workspace = true }
rand            = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }

[dev-dependencies]

[lints.rust]
unsafe_code = "allow"
