[package]
name = "latchgate-state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Persistent state stores (approvals, budgets) for LatchGate"

[dependencies]
latchgate-core = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
redis          = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
chrono         = { workspace = true }
uuid           = { workspace = true }
hex            = { workspace = true }
rand           = { workspace = true }
tokio          = { workspace = true }
rusqlite       = { workspace = true }

[dev-dependencies]
[lints]
workspace = true
