[project]
name = "latchgate-orchestrator"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "latchgate",
    "httpx>=0.27",
    "tomli>=2.0; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
]

[tool.uv.sources]
latchgate = { path = "../../sdk/python", editable = true }
