[package]
name        = "latchgate-provider-email"
version.workspace = true
edition.workspace = true
description = "Email (SMTP) provider for LatchGate — compiled to wasm32-wasip2"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }

[package.metadata.component]
package = "latchgate:provider"

[package.metadata.component.target]
world = "provider"
path  = "../wit"
