[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latchgate"
version = "0.2.0"
description = "Python SDK for the LatchGate action authorization gateway"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
license-files = ["LICENSE"]
keywords = ["latchgate", "ai", "agent", "authorization", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=43.0",
    "httpx[http2]>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "black>=26.3.1",
]

[tool.hatch.build.targets.wheel]
packages = ["latchgate"]

[tool.uv]
package = true
exclude-newer = "1 week"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
