[package]
name = "latchgate-stress"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bench]]
name = "hot_paths"
harness = false

[dependencies]
latchgate-core      = { workspace = true }
latchgate-config    = { workspace = true }
latchgate-auth      = { workspace = true }
latchgate-policy    = { workspace = true }
latchgate-providers = { workspace = true }
latchgate-cli       = { workspace = true }
latchgate-crypto    = { workspace = true }
latchgate-ledger    = { workspace = true }
latchgate-registry  = { workspace = true }

tokio      = { workspace = true }
serde_json = { workspace = true }
sha2       = { workspace = true }
hex        = { workspace = true }

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "4", features = ["html_reports"] }

[lints]
workspace = true
